--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,32 @@
 /* main.css */
 /***********/
 
-#map {
-	height: 500px;
-	width: 500px;
+
+section#content h1{
+	position: relative;
+	top: 0;
+	left: 0;
+	height: 10%;
+	width: 100%;
+	text-align: center;
+}
+
+section#content nav{
+	position: absolute;
+	z-index: 200;
+	background: #fff;
+	width: 700px;
+	height: 200px;
+	top: 50%;
+	margin-top: -100px;
+	left: 50%;
+	margin-left: -350px;	
+}
+
+section#content div#map {
+	position: absolute;
+	top: 10%;
+	width: 100%;
+	height: 90%;
+	z-index: 100;
 }
