--- a/css/main.css
+++ b/css/main.css
@@ -74,3 +74,20 @@ section#content div#map {
 	height: 100%;
 	z-index: 100;
 }
+
+/********/
+/* map */
+div.pop{
+	border: #ececec;
+}
+
+div.popLeft{
+	width: 290px;
+	height: 250px;
+}
+
+div.popRight{	
+	width: 160px;
+	height:250px;
+	background: #f5f5f5;
+}
