--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,16 @@ section#content div#newLoc{
 	right: 25px;
 }
 
-section#content nav{
+section#content nav#nav-1{
+	display: none;
+	position: absolute;
+	z-index: 200;
+	width: 380px;
+	height: 200px;
+	top: 250px;
+	right: 25px;
+}
+section#content nav#nav-2{
 	display: none;
 	position: absolute;
 	z-index: 200;
