ajout d'une scroll bar dans la about box
+ cleaning de fichiers inutiles

--- a/css/main.css
+++ b/css/main.css
@@ -166,6 +166,8 @@ section#content div#about{
 	padding: 10px 20px;
 	font-family: Georgia, serif;
 	font-size: 10px;
+	
+	height: 500px;
 }
 
 section#content div#about a{
